# Plate_Geomag

./: .gitignore  LICENSE  README.md  plate_geomag.py  pyproject.toml
plate_geomag/: __init__.py
